# bidirectional-typechecking

./: .gitignore  Makefile  README.md  bidir.opam  dune-project  typecheck.opam  unitTest.py
docs/: book.toml
docs/book/: index.html  overview.html  print.html  searchindex.js  searchindex.json
docs/src/: overview.md
examples/: 10_eq.fs  11_nested.fs  12_nested_parens.fs  13_if.fs  14_rec.fs  15_add_many.fs  16_shadow.fs  17_dollars.fs  4_app.fs  5_fun.fs  6_add.fs  7_show.fs  9_let.fs
lib/ast/: ast.ml  context.ml  dune  ident.ml  token.ml  type.ml
lib/chalk/: dune
lib/eval/: dune  eval.ml
lib/gensym/: dune  gensym.ml
lib/parsing/: dune  lexer.mll  parsing.ml
lib/stdlib/: dune  exn.ml  math.ml  stdlibrary.ml
lib/typecheck/: dune  typecheck.ml
lib/uniquify/: dune  uniquify.ml
